--- a/app/templates/operation.hbs
+++ b/app/templates/operation.hbs
@@ -5,7 +5,7 @@
 
 <p>
   Lähtö- ja kohdekentälle valitaan lentoalue niiden <abbr title="International Civil Aviation Organization">ICAO</abbr>-tunnusten perusteella.
-  Mikäli toinen kenttä on esimerkiksi Suomessa ja toinen Pohjois-Euroopassa, valitaan muuttujat jälkimmäisen mukaan.
+  Mikäli toinen kenttä on esimerkiksi Suomessa ja toinen Pohjois-Euroopassa, muuttujat valitaan taulukossa jälkimmäisenä olevan alueen mukaan.
 </p>
 
 <ul>
@@ -56,3 +56,7 @@
   {{/each}}
 
 </table>
+
+<p>
+  Lähdekoodi löytyy <a href="https://github.com/Ekokumppanit/Lentolaskuri">GitHubista</a>.
+</p>
