--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -1,4 +1,5 @@
 @import 'bootstrap/less/bootstrap';
+@import 'bootstrap/less/responsive';
 @import 'font-awesome/build/assets/font-awesome/less/font-awesome';
 @import (less) 'select2/select2.css';
 
@@ -138,4 +139,18 @@ input[type=number] {
 
 .map {
   height: 300px;
+}
+
+footer {
+  text-align: center;
+  margin-top: 10px;
+  padding: 10px 0;
+  background: #f5f5f5;
+  border-top: 1px solid #e5e5e5;
+  a:hover {
+    text-decoration: none;
+  }
+  i {
+    font-size: 87px;
+  }
 }
