--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -3,6 +3,11 @@
 @import 'font-awesome/less/font-awesome';
 @import (less) 'select2/select2.css';
 
+html {
+  height: 100%;
+  background-color: #f5f5f5;
+}
+
 .calculator {
   .inactive {
     opacity: 0.5;
@@ -147,8 +152,8 @@ input[type=number] {
 
 footer {
   text-align: center;
-  margin-top: 10px;
-  padding: 10px 0;
+  margin-top: 50px;
+  padding: 20px 0 40px;
   background: #f5f5f5;
   border-top: 1px solid #e5e5e5;
   a:hover {
