--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -8,6 +8,18 @@ html {
   background-color: #f5f5f5;
 }
 
+body {
+  background-image: url('../images/bg.png');
+  background-position: center center;
+  background-attachment: fixed;
+  background-color: #f9f9f9;
+}
+
+.calculator {
+  background-color: rgba(255, 255, 255, 0.9);
+  padding: 20px 20px;
+}
+
 .calculator {
   .inactive {
     opacity: 0.5;
@@ -21,6 +33,16 @@ html {
 
 .no-js .js-enabled-content {
   opacity: 0.2;
+}
+
+.textcontent {
+  .nav {
+    margin-bottom: 0px !important;
+  }
+  .tab-content {
+    padding: 20px 13px !important;
+    background: #fff;
+  }
 }
 
 .select2-container {
@@ -148,6 +170,7 @@ input[type=number] {
 
 .map {
   height: 300px;
+  margin-bottom: 20px;
 }
 
 footer {
