Add one possible way to show donation links, with styling.

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -29,6 +29,35 @@ body {
   }
 }
 
+.donationtarget {
+  display: block;
+  margin-bottom: 15px;
+  border: 1px solid #999;
+  overflow: auto;
+
+  a {
+    display: block;
+    padding: 15px 10px;
+
+    img {
+      float: right;
+      width: auto;
+      height: 90px;
+      margin: 0px 15px 0px 0px;
+    }
+
+    span {
+      display: block;
+      padding: 35px 0px;
+    }
+  }
+
+  :hover {
+    background: #efefef;
+  }
+
+}
+
 .no-js .js-enabled-content {
   opacity: 0.2;
 }
